# multiple_viewer

./: .gitignore  CMakeLists.txt  Makefile  README.md  acronyms.h  analysis_logic.cpp  analysis_logic.h  cmd_line_parser.h  file_logic.cpp  file_logic.h  graph_data.json  graph_input.csv  graph_output.csv  main  main.cpp  map_logic.cpp  map_logic.h  render_buffer.h  search_logic.cpp  test_graph.csv  test_graph.json  test_graph_tmp.csv  test_logic.cpp  test_output.csv  test_search  test_search.cpp  test_xml  test_xml.cpp  testsuite2_logic.cpp  tmp_atlas.csv  tmp_overlay.csv  viewer_logic.cpp  viewer_logic.h
apps/brain_demo/: main.cpp
apps/viewer/: main.cpp
config/: app_config.yaml  mesh_config.yaml  mock_mesh_data.yaml
docs/: analysis_findings_report.md  api_guide.md  brain_model_integration.md  challenges.md  data_store_design.md  enhancements.md  glia_enhancements.md  idea_tracking.md  image_viewer_restrictions.md  issue_tracking.md  plan.md  rendering_challenges.md  requirements1.md  testing_guide.md  testing_logs.md  ui_printer_guide.md
rules/: commands.xml
src/: analysis_logic.cpp  analysis_logic.h  cmd_line_parser.cpp  config_bridge.h  console_logic.cpp  console_logic.h  file_logic.cpp  file_logic.h  logger.h  main.cpp  map_logic.cpp  map_logic.h  processor_logic.cpp  processor_logic.h  sdd_checker.cpp  sdd_checker.h  search_logic.cpp  search_logic.h  test_logic.cpp  testsuite2_logic.cpp  testsuite3_logic.cpp  testsuite3_logic.h  viewer_logic.cpp  viewer_logic.h
src/analytics/: analytics_engine_ext.cpp  analytics_engine_ext.h  mesh_discovery_engine.cpp  mesh_discovery_engine.h  nlp_engine.cpp  nlp_engine.h  temporal_manager.cpp  temporal_manager.h  trend_analyzer.cpp  trend_analyzer.h  worker_pool.cpp  worker_pool.h
src/genome/: genome_manager.cpp  genome_manager.h
src/input/: command_stack.cpp  command_stack.h  input_manager.cpp  input_manager.h  shortcut_manager.cpp  shortcut_manager.h
src/io/: image_manager.cpp  image_manager.h  io_manager.cpp  io_manager.h  path_validator.cpp  path_validator.h  recovery_manager.cpp  recovery_manager.h  sim_decoder.cpp  sim_decoder.h  web_server_stub.cpp  web_server_stub.h  xml_extractor.h  xml_parser.cpp  xml_parser.h  yaml_parser.cpp  yaml_parser.h
src/layout/: book_view.cpp  book_view.h  layout_manager.cpp  layout_manager.h  minimap_renderer.cpp  minimap_renderer.h  nexus_flow_view.cpp  nexus_flow_view.h  page_view.cpp  page_view.h
src/model/: brain_canonical.h  brain_interface.h  brain_label.cpp  brain_label.h  brain_model.cpp  brain_model.h  brain_model_manifest.h  brain_model_registry.cpp  brain_model_registry.h  brain_overlay.cpp  brain_overlay.h  brain_text_topology.cpp  brain_text_topology.h  greenhouse_adapter.h  model_common.h  model_repository.cpp  model_repository.h  overlay_manager.cpp  overlay_manager.h  overlay_types.h  quanta_glia.cpp  quanta_glia.h  temporal_engine.cpp  temporal_engine.h  text_topology.h
src/render/: camera.cpp  camera.h  console_renderer.cpp  console_renderer.h  frame_buffer.cpp  frame_buffer.h  image_renderer.cpp  image_renderer.h  minimap_renderer.cpp  minimap_renderer.h  overlay_renderer.cpp  overlay_renderer.h  render_interface.h  render_layer_manager.cpp  render_layer_manager.h  renderer_factory.h  sdl_renderer.cpp  sdl_renderer.h  spatial_index.cpp  spatial_index.h  viewport.h  visual_mapper.cpp  visual_mapper.h
src/scripting/: plugin_manager.cpp  plugin_manager.h  script_runtime.cpp  script_runtime.h
src/ui/: benchmark_runner.cpp  benchmark_runner.h  help_system.cpp  help_system.h  main_menu.cpp  main_menu.h  status_bar.cpp  status_bar.h
tests/: dynamic_graph_tests.cpp  quanta_glia_unit_tests.cpp  test_logic.cpp  test_logic.h  testsuite2_logic.cpp  testsuite2_logic.h  testsuite3_logic.cpp  testsuite3_logic.h  testsuite4_logic.cpp  unit_main.cpp
tests/assets/: generate_assets.cpp
tests/bdd/: bdd_main.cpp  bdd_runner.cpp  bdd_runner.h  bdd_test_main.cpp  bdd_test_main.h
tests/cdd/: Makefile  chai_checkins.md  chai_checkouts.md
tests/print/: UIPrinter.cpp  UIPrinter.h
tests/sdd/: Makefile  chai_checkins.md  chai_checkouts.md  sorrel_checkins.md  sorrel_checkouts.md
tests/sorrel/: README.md  SDD_Cheat_Sheet.md  SORREL_Agent_Handbook.md  SORREL_Challenges_and_Improvements.md  SORREL_Development_Methodology.md  SORREL_How_SDD_Works.md  SORREL_Human_in_the_Loop.md  SORREL_Lifecycle_Map.md  SORREL_New_Development_Paradigm.md  (+14 more)
(+249 files in other folders)
